# wowless

./: .bazelrc  .busted  .clang-format  .dockerignore  .editorconfig  .emmyrc.json  .env.dist  .gitignore  .gitmodules  .gitpod.yml  .luacheckrc  .luacov  .luarc.json  .pre-commit-config.yaml  .sqlfluff  BUILD.bazel  BUILD.elune.bazel  BUILD.luafilesystem.bazel  BUILD.sqlite3.bazel  BUILD.utf8h.bazel  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  deps.json  env.lua  gextract.lua  main.c  meta.lua  packages.txt  requirements.txt  run.sh  sandbox.lua  scrapelib.lua  setup.sh  stylua.toml  (+14 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: pre-commit-autoupdate.yml  test.yml
.theia/: tasks.json
addon/EluneTest/: EluneTest.toc  case.lua
addon/Wowless/: Wowless.lua  Wowless.toc  Wowless.xml  Wowless_Mainline.toc  Wowless_TBC.toc  Wowless_Vanilla.toc  api.lua  arraydiff.lua  asynctests.lua  builds.lua  cvars.lua  evenmoreintrinsic.xml  framework.lua  funtainer.lua  generated.lua  global_wow.lua  global_wow_beta.lua  global_wow_classic.lua  global_wow_classic_beta.lua  global_wow_classic_era.lua  global_wow_classic_era_ptr.lua  global_wow_classic_ptr.lua  global_wowt.lua  globalapis.lua  init.lua  luaobjects.lua  namespaceapis.lua  statemachine.lua  test.lua  test.xml  uiobjectapis.lua  uiobjects.lua  util.lua
addon/WowlessSaver/: WowlessSaver.lua  WowlessSaver.toc
addon/WowlessTracker/: WowlessTracker.toc  tracker.lua
bazel/: elune.bazel  expat.bazel  lsqlite3.bazel  lua.bzl  luadate.bazel  luaexpat.bazel  luafilesystem.bazel  luapath.bazel  luassert.bazel  lyaml.bazel  lzlib.bazel  penlight.bazel  puclua.bazel  say.bazel  sqlite3.bazel  utf8h.bazel  yaml.bazel
cmake/: copy_executable.cmake  fast_math.cmake  preprocess_line.cmake
data/: builds.yaml  cvars.yaml  datafiles.yaml  families.yaml  flavors.yaml  gametypes.yaml  impl.yaml  modules.yaml  products.yaml  scripttypes.yaml  sql.yaml  stringenums.yaml  test.yaml  types.yaml  uiobjectimpl.yaml
data/api/: AbandonQuest.yaml  AbandonSkill.yaml  AcceptAreaSpiritHeal.yaml  AcceptArenaTeam.yaml  AcceptBattlefieldPort.yaml  AcceptDuel.yaml  AcceptGroup.yaml  AcceptGuild.yaml  AcceptProposal.yaml  AcceptQuest.yaml  AcceptResurrect.yaml  AcceptSockets.yaml  AcceptSpellConfirmationPrompt.yaml  AcceptTrade.yaml  AcceptXPLoss.yaml  AcknowledgeAutoAcceptQuest.yaml  AcknowledgeSurvey.yaml  ActionBindsItem.yaml  ActionHasRange.yaml  AddAutoQuestPopUp.yaml  AddChatWindowChannel.yaml  AddChatWindowMessages.yaml  AddPreviewTalentPoints.yaml  AddQuestWatch.yaml  AddTrackedAchievement.yaml  AddTradeMoney.yaml  Ambiguate.yaml  AntiAliasingSupported.yaml  ArchaeologyGetIconInfo.yaml  ArchaeologyMapUpdateAll.yaml  ArcheologyGetVisibleBlobID.yaml  AreAccountAchievementsHidden.yaml  AreDangerousScriptsAllowed.yaml  AreTalentsLocked.yaml  ArenaTeamDisband.yaml  ArenaTeamInviteByName.yaml  ArenaTeamLeave.yaml  ArenaTeamRoster.yaml  ArenaTeamSetLeaderByName.yaml  ArenaTeamUninviteByName.yaml  (+5825 more)
data/dbdefs/: ChrClasses.yaml  ChrClassesXPowerTypes.yaml  ChrRaces.yaml  ChrSpecialization.yaml  FactionGroup.yaml  GlobalColor.yaml  GlobalStrings.yaml  Item.yaml  ManifestInterfaceTOCData.yaml  PaperDollItemFrame.yaml  PowerType.yaml  RenownRewards.yaml  SpellMisc.yaml  SpellName.yaml  Talent.yaml  TalentTab.yaml  UiMap.yaml  (+4 more)
spec/: addon_spec.lua  elune_spec.lua  frame_spec.lua  loader_spec.lua  runner_spec.lua  tainted_spec.lua  util_spec.lua  wowapi_spec.lua  wowless_spec.lua  xml_spec.lua
tests/: primtable_test.c  xstate_test.c
tools/: addons.lua  addons.yaml  apis2c.lua  autodocs.lua  blp2png.lua  bump.lua  bumpaddons.lua  casc.lua  casclib.c  casclib.cpp  cascmap.lua  curseforge.lua  db2.lua  db2compare.lua  db2dump.lua  dbc.lua  dbd.lua  dbdefs.lua  dbdump.lua  dblist.lua  docenv.lua  docs.lua  enum.lua  errsv.lua  fetch.lua  file2c.h  file2c.lua  genc.lua  generatexmltest.lua  genmodules.lua  gentest.lua  gentypes.lua  gextract.lua  listfile.lua  lua2c.c  lua2c.h  lua2c.lua  lua2yaml.lua  luamain.c  luamain.h  (+37 more)
wowapi/: AcceptBattlefieldPort.lua  AntiAliasingSupported.lua  BNFeaturesEnabled.lua  BNFeaturesEnabledAndConnected.lua  BNGetInfo.lua  BankButtonIDToInvSlotID.lua  C_AdventureJournal.CanBeShown.lua  C_AreaPoiInfo.GetAreaPOIForMap.lua  C_ArtifactUI.GetEquippedArtifactInfo.lua  C_AuctionHouse.GetAuctionItemSubClasses.lua  C_AuctionHouse.HasFavorites.lua  C_AuctionHouse.QueryBids.lua  C_AuthChallenge.SetFrame.lua  C_AzeriteItem.FindActiveAzeriteItem.lua  C_BarberShop.ClearPreviewChoices.lua  C_BarberShop.SaveSeenChoices.lua  C_Calendar.EventGetClubId.lua  C_Calendar.EventGetTypesDisplayOrdered.lua  C_Calendar.GetDefaultGuildFilter.lua  C_Calendar.GetNumPendingInvites.lua  C_Calendar.OpenCalendar.lua  C_ChallengeMode.GetMapTable.lua  C_CharacterServices.HasRequiredBoostForClassTrial.lua  C_CharacterServicesPublic.ShouldSeeControlPopup.lua  C_ChatInfo.GetNumReservedChatWindows.lua  C_ChatInfo.IsValidChatLine.lua  C_ChatInfo.RegisterAddonMessagePrefix.lua  C_ClassTrial.GetClassTrialLogoutTimeSeconds.lua  C_ClassTrial.IsClassTrialCharacter.lua  C_Club.ClearAutoAdvanceStreamViewMarker.lua  C_Club.ClearClubPresenceSubscription.lua  C_Club.Flush.lua  C_Club.GetInvitationsForSelf.lua  C_Club.GetSubscribedClubs.lua  C_Club.IsEnabled.lua  C_Club.ShouldAllowClubType.lua  C_ClubFinder.GetClubRecruitmentSettings.lua  C_ClubFinder.GetPlayerApplicantLocaleFlags.lua  C_ClubFinder.GetPlayerApplicantSettings.lua  C_ClubFinder.GetPlayerSettingsFocusFlagsSelectedCount.lua  (+686 more)
wowless/: api.lua  blp.lua  bubblewrap.c  bubblewrap.h  bubblewrap.lua  checks.h  ctypecheck.c  db.lua  db2.lua  debug.c  env.lua  events.lua  ext.c  funcheck.lua  globalstrings.lua  hlist.lua  http.lua  loader.lua  luaobject.c  luaobject.h  mixin.c  modules.lua  png.lua  primtable.c  primtable.h  profiler.lua  render.lua  runner.lua  sandbox.c  secure.c  sqlite.c  stubs.c  stubs.cpp  stubs.h  toc.lua  typecheck.h  typecheck.lua  uiobject.c  uiobject.h  util.lua  (+6 more)
(+3291 files in other folders)
