load("bazel/lua.bzl", "run_lua_script")

cc_binary(
    name = "wowless",
    srcs = ["main.c"],
    features = ["fully_static_link"],
    deps = [
        ":ext",
        "@elune",
        "@lsqlite3",
        "@luaexpat",
        "@luafilesystem//:lib",
        "@lyaml",
        "@lzlib",
    ],
)

cc_library(
    name = "ext",
    srcs = ["wowless/ext.c"],
    deps = ["@elune"],
)

filegroup(
    name = "tools_util",
    srcs = [
        "@penlight",
        "tools/util.lua",
    ],
)

run_lua_script(
    name = "build_listfile",
    script = "tools/listfile.lua",
    output = "build/listfile.lua",
    data = [
        ":tools_util",
        "vendor/listfile/community-listfile.csv",
    ],
)

run_lua_script(
    name = "build_tactkeys",
    script = "tools/tactkeys.lua",
    output = "build/tactkeys.lua",
    data = [
        ":tools_util",
        "vendor/tactkeys/WoW.txt",
    ],
)

genrule(
    name = "whatever",
    outs = ["whatever.sh"],
    cmd = "echo \\\"\\$$@\\\" > $@",
)

sh_test(
    name = "test",
    srcs = [":whatever.sh"],
    data = [
        "@luassert",
        ":wowless",
        "tools/runtests.lua",
    ],
    args = [
        "$(location :wowless)",
        "$(location tools/runtests.lua)",
    ],
    env = {
        "LUA_PATH": "?.lua;external/luassert/?.lua;external/luassert/?/init.lua;external/say/?/init.lua",
    },
)
