cc_library(
    name = "liblua",
    visibility = ["//visibility:public"],
    srcs = [
        "liblua/lapi.c",
        "liblua/lapi.h",
        "liblua/lauxlib.c",
        "liblua/lbaselib.c",
        "liblua/lbitlib.c",
        "liblua/lcode.c",
        "liblua/lcode.h",
        "liblua/lcompatlib.c",
        "liblua/lcorolib.c",
        "liblua/ldblib.c",
        "liblua/ldebug.c",
        "liblua/ldebug.h",
        "liblua/ldo.c",
        "liblua/ldo.h",
        "liblua/ldump.c",
        "liblua/lfunc.c",
        "liblua/lfunc.h",
        "liblua/lgc.c",
        "liblua/lgc.h",
        "liblua/linit.c",
        "liblua/liolib.c",
        "liblua/llex.c",
        "liblua/llex.h",
        "liblua/llimits.h",
        "liblua/lmanip.c",
        "liblua/lmanip.h",
        "liblua/lmathlib.c",
        "liblua/lmem.c",
        "liblua/lmem.h",
        "liblua/loadlib.c",
        "liblua/lobject.c",
        "liblua/lobject.h",
        "liblua/lopcodes.c",
        "liblua/lopcodes.h",
        "liblua/loslib.c",
        "liblua/lparser.c",
        "liblua/lparser.h",
        "liblua/lreadline.c",
        "liblua/lreadline.h",
        "liblua/lsec.c",
        "liblua/lsec.h",
        "liblua/lseclib.c",
        "liblua/lstate.c",
        "liblua/lstate.h",
        "liblua/lstatslib.c",
        "liblua/lstring.c",
        "liblua/lstring.h",
        "liblua/ltable.c",
        "liblua/ltable.h",
        "liblua/ltablib.c",
        "liblua/ltm.c",
        "liblua/ltm.h",
        "liblua/lundump.c",
        "liblua/lundump.h",
        "liblua/lvm.c",
        "liblua/lvm.h",
        "liblua/lzio.c",
        "liblua/lzio.h",
        "lstrlib.c",
    ],
    hdrs = [
        "liblua/include/lauxlib.h",
        "liblua/include/lua.h",
        "liblua/include/luaconf.h",
        "liblua/include/lualib.h",
    ],
    strip_include_prefix = "liblua/include",
    copts = [
        "-Iexternal/elune/liblua",
        "-Iexternal/elune/liblua/include",
    ],
    deps = ["@utf8h"],
    linkopts = ["-ldl"],
)

genrule(
    name = "generate_luaconf",
    outs = ["liblua/include/luaconf.h"],
    srcs = ["liblua/include/luaconf.h.in"],
    cmd = """
      cat $(location liblua/include/luaconf.h.in) |
      sed 's/#cmakedefine LUA_USE_LINUX/#define LUA_USE_LINUX/' |
      sed 's/#cmakedefine LUA_USE_POSIX/#define LUA_USE_POSIX/' |
      sed 's/#cmakedefine LUAI_BITSINT/#define LUAI_BITSINT/' |
      sed 's/@LUAI_BITSINT@/32/' |
      grep -v cmakedefine > $(location liblua/include/luaconf.h)
    """,
)

genrule(
    name = "fix_lstrlib",
    outs = ["lstrlib.c"],
    srcs = ["liblua/lstrlib.c"],
    cmd = "sed 's/<utf8.h>/\"utf8.h\"/' < $(location liblua/lstrlib.c) > $(location lstrlib.c)",
)
